--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://codeigniter.com",
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
+        "php": "8.2.*",
         "ext-mbstring": "*",
         "ext-mysqli": "*"
     },
